# Spotify2Local

./: .env.example  App.css  CONTRIBUTING.md  LICENSE  README.md  main.py  metadata.py  pyproject.toml  spotify_api.py  tui.py
assets/: demo.tape
spotify2local/: main.py  spotify_api.py  tui.py  yt_downloader.py
src/: App.css  tui.py
